--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
